04-orquestracao/minikube-examples/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
spec:
  replicas: 2 # Número de pods
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        - name: java-app
          image: nicolasmello/java-app:latest # Use sua imagem Docker de estudo
          ports:
            - containerPort: 8080
          # Recursos opcionais
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
