04-orquestracao/minikube-examples/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
spec:
  selector:
    app: java-app
  ports:
    - protocol: TCP
      port: 8080        # Porta dentro do cluster
      targetPort: 8080  # Porta do container
  type: NodePort       # Para expor externamente via minikube
